Sites: fix missing margin on every 3rd card in mobile

--- a/assets/stylesheets/sections/_sites.scss
+++ b/assets/stylesheets/sections/_sites.scss
@@ -74,10 +74,6 @@
 
 	&:nth-child( 3n ) {
 		margin-right: 0;
-
-		@include breakpoint( "<480px" ) {
-			margin: 0;
-		}
 	}
 
 	&.has-update {
